# LpWatch

./: .gitignore  CMakeLists.txt  LpTestCa.key  LpWatch.sln  LpWatch.vcxproj  LpWatch.vcxproj.filters  lptool.py  partitions.csv  readme.md  sdkconfig
components/cJSON/: CMakeLists.txt
components/lpbsp/: CMakeLists.txt  lpbsp.c  lpbsp.h
components/lplib/: CMakeLists.txt  Kconfig  lplib.c  lplib.h
components/lpverify/: CMakeLists.txt  lpverify.h
components/lvgl_839/: CMakeLists.txt  Kconfig
components/lvgl_839/src/: lv_conf_internal.h
components/miniz_300/: CMakeLists.txt  miniz_300.c  miniz_300.h
components/minmea_030/: CMakeLists.txt  minmea.c  minmea.h
components/sdl2/: lv_conf.h  sdlmain.c
main/: CMakeLists.txt  lvgl_clock_page.c  lvgl_dispaly_set_page.c  lvgl_file_explorer_page.c  lvgl_general_page.c  lvgl_inc.h  lvgl_map_page.c  lvgl_setting_page.c  lvgl_test_page.c  lvgl_wifi_detail_page.c  lvgl_write_sn_page.c  main.c
main/resource/: lvgl_img.c  lvgl_img_gps_compass.c  lvgl_img_hand.c  lvgl_img_hand_hour.c  lvgl_img_hand_min.c
